--- a/_posts/2017-04-11-2049.md
+++ b/_posts/2017-04-11-2049.md
@@ -5,5 +5,4 @@ title: '2049'
 ---
 ## I've seen the Future. I can't afford it.
 
-![It seems like everyone is in an Arms Race these days...]({{site.baseurl}}/media/2049.png)
-[]({{site.baseurl}}/media/2049.png)
+[![It seems like everyone is in an Arms Race these days...]({{site.baseurl}}/media/2049.png)]({{site.baseurl}}/media/2049.png)
