--- a/_posts/2017-04-11-2049.md
+++ b/_posts/2017-04-11-2049.md
@@ -7,4 +7,4 @@ title: '2049'
 
 [![It seems like everyone is in an Arms Race these days...]({{site.baseurl}}/media/2049.png)]({{site.baseurl}}/media/2049.png)
 
-Click to full screen
+Click image to view larger
