--- a/_posts/2019-03-19-Docker.md
+++ b/_posts/2019-03-19-Docker.md
@@ -12,7 +12,12 @@ Now I shouldn't be giving explanations, becuase I rarely seem to know what I'm d
 
 ## Get To the Good Stuff Already!
 
-Okay fine! I'm using Docker mainly for my plex server, and my setup is largely based upon this guide.
+Okay fine! I'm using Docker mainly for my plex server, and my setup is largely based upon ![this guide (https://blog.linuxserver.io/2017/06/24/the-perfect-media-server-2017/). Honestly despite it being from 2017, the majority of the info there is still good. Am I telling you to go read that instead of this? Well if you are looking for a step by step tutorial, yes. That is exactly what I'm saying. If you prefer my ramblings, stay right where you are.
 
-![Rollover](link to picture)
+### Debian
+That guide uses Debian 9, which was new back then, and is as of today, still the current Debian Stable. For a server, you really want stable! I toyed around with Ubuntu or maybe running Debian with a "lite" GUI, but really there is no need for this on a server. That guide points out a few "GUI" options (Like Cockpit, or Portainer, more on that later) that I think make any local GUI desktop totally unneeded. Debian is easy to install, and easy to find answers about online. Recommend.
+
+### Mergerfs
+Mergerfs is actually one of the big reasons I like this guide! Mergerfs is IMHO way more elegant than traditional RAID. You don't have to configure much really, and if a drive goes out
+
 
