--- a/_posts/2019-03-19-Docker.md
+++ b/_posts/2019-03-19-Docker.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-published: true
+published: false
 title: Docker Shenanigans
 ---
 
@@ -18,6 +18,6 @@ Okay fine! I'm using Docker mainly for my plex server, and my setup is largely b
 That guide uses Debian 9, which was new back then, and is as of today, still the current Debian Stable. For a server, you really want stable! I toyed around with Ubuntu or maybe running Debian with a "lite" GUI, but really there is no need for this on a server. That guide points out a few "GUI" options (Like Cockpit, or Portainer, more on that later) that I think make any local GUI desktop totally unneeded. Debian is easy to install, and easy to find answers about online. Recommend.
 
 ### Mergerfs
-Mergerfs is actually one of the big reasons I like this guide! Mergerfs is IMHO way more elegant than traditional RAID. You don't have to configure much really, and if a drive goes out
+Mergerfs is actually one of the big reasons I like this guide! Mergerfs is IMHO way more elegant than traditional RAID. You don't have to configure much really, and if a drive goes out, whatever! Slap another one in redownload what you lost on that one drive, and the rest is still safely on the other drives. It also allows Sonarr to have a much easier time with shows that span multiple drives. There is no other good way to handle that other than RAID.
 
 
